--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
     <li data-aos="zoom-in" data-aos-duration="600"><a href="#about-us">About Us</a></li>
     <li data-aos="zoom-in" data-aos-duration="800"><a href="#reviews">Reviews</a></li>
     <li data-aos="zoom-in" data-aos-duration="1000"><a href="#shop">Shop</a></li>
-        <li data-aos="zoom-in" data-aos-duration="1000"><a href="https://chicagovendettarp.com/terms.html">Terms</a></li>
+        <li data-aos="zoom-in" data-aos-duration="1000"><a href="https://zpydir.github.io/anonvagency/terms.html">Terms</a></li>
 </ul>
     
                     </div>
