--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                     <div class="navbar_links" id="navbarNav"> 
     
 <ul>
-    <li data-aos="zoom-in" data-aos-duration="400"><a href="https://vendettanyc.com/" class="active">Home</a></li>
+    <li data-aos="zoom-in" data-aos-duration="400"><a href="https://zpydir.github.io/anonvagency/" class="active">Home</a></li>
     <li data-aos="zoom-in" data-aos-duration="600"><a href="#about-us">About Us</a></li>
     <li data-aos="zoom-in" data-aos-duration="800"><a href="#reviews">Reviews</a></li>
     <li data-aos="zoom-in" data-aos-duration="1000"><a href="#shop">Shop</a></li>
