--- a/terms.html
+++ b/terms.html
@@ -67,10 +67,11 @@
                     <div class="navbar_links" id="navbarNav"> 
     
 <ul>
-    <li data-aos="zoom-in" data-aos-duration="400"><a href="https://anonagency.com/" class="active">Home</a></li>
-    <li data-aos="zoom-in" data-aos-duration="600"><a href="https://anonagency.com/#about-us">About Us</a></li>
-    <li data-aos="zoom-in" data-aos-duration="800"><a href="https://anonagency.com/#services">Services</a></li>
-    <li data-aos="zoom-in" data-aos-duration="1000"><a href="https://anonagency.com/#shop">Shop</a></li>
+    <li data-aos="zoom-in" data-aos-duration="400"><a href="https://zpydir.github.io/anonvagency/" class="active">Home</a></li>
+    <li data-aos="zoom-in" data-aos-duration="600"><a href="https://zpydir.github.io/anonvagency/#about-us">About Us</a></li>
+    <li data-aos="zoom-in" data-aos-duration="800"><a href="https://zpydir.github.io/anonvagency/#reviews">Reviews</a></li>
+    <li data-aos="zoom-in" data-aos-duration="1000"><a href="https://zpydir.github.io/anonvagency/#shop">Shop</a></li>
+        <li data-aos="zoom-in" data-aos-duration="1000"><a href="https://zpydir.github.io/anonvagency/terms.html">Terms</a></li>
 </ul>
     
                     </div>
